jenkins-minikube/jenkins-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      hostname: jenkins
      containers:
      - name: jenkins
        image: juezignasi/jenkins-custom:lts
        imagePullPolicy: Always
        securityContext:
          runAsUser: 0
          privileged: true  # Permite al contenedor acceder al socket
        ports:
        - containerPort: 8080
        - containerPort: 50000
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home-storage
        - name: docker-socket
          mountPath: /var/run/docker.sock
        - name: maven-cache
          mountPath: /root/.m2
      volumes:
      - name: jenkins-home-storage
        persistentVolumeClaim:
          claimName: jenkins-home-pvc
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
      - name: maven-cache
        emptyDir: {}
